--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,9 +2,9 @@ Package: ambur
 Type: Package
 Title: Analyzing Moving Boundaries Using R
 Version: 1.0
-Date: 2010-09-20
+Date: 2011-06-28
 Author: C.Jackson
 Maintainer: Chester W. Jackson Jr. <jackson.cwjr@gmail.com>
-Description: Analyzes position changes of a boundary (shoreline) along transects.
+Description: Analyzes position changes of a boundary (shoreline) along transects. (Version 1.0c)
 License: GNU General Public License
 LazyLoad: yes
