--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -8,4 +8,4 @@ Maintainer: Chester W. Jackson Jr. <jackson.cwjr@gmail.com>
 Depends: R (>= 2.12), akima, locfit, shapefiles, sp, spatial, spatstat, tcltk, foreign, MASS, mgcv, grid, lattice, nlme
 Description: Analyzes position changes of a boundary (shoreline) along transects. (Version 1.0c)
 License: GNU General Public License
-LazyLoad: no
+LazyLoad: yes
