--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: ambur
 Type: Package
 Title: Analyzing Moving Boundaries Using R
-Version: 1.03-5
+Version: 1.03-6
 Date: 2011-08-11
 Author: C.Jackson
 Maintainer: Chester W. Jackson Jr. <jackson.cwjr@gmail.com>
-Depends: R (>= 2.12), akima, locfit, shapefiles, sp, spatial, spatstat, googleVis, rgdal, tcltk, foreign, MASS, mgcv, grid, lattice, nlme
+Depends: R (>= 2.12), akima, locfit, shapefiles, sp, spatial, spatstat, googleVis, rgeos, rgdal, tcltk, foreign, MASS, mgcv, grid, lattice, nlme
 Description: Analyzes position changes of a boundary (shoreline) along transects. (Version 1.0c)
 License: GNU General Public License
 LazyLoad: yes
