--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,10 +2,10 @@ Package: ambur
 Type: Package
 Title: Analyzing Moving Boundaries Using R
 Version: 1.03-6
-Date: 2011-08-11
+Date: 2011-08-13
 Author: C.Jackson
 Maintainer: Chester W. Jackson Jr. <jackson.cwjr@gmail.com>
 Depends: R (>= 2.12), akima, locfit, shapefiles, sp, spatial, spatstat, googleVis, rgeos, rgdal, tcltk, foreign, MASS, mgcv, grid, lattice, nlme
-Description: Analyzes position changes of a boundary (shoreline) along transects. (Version 1.0c)
+Description: Analyzes position changes of a boundary (shoreline) along transects. (Version 1 - LEMUR)
 License: GNU General Public License
 LazyLoad: yes
