--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -5,8 +5,8 @@ Version: 1.1.13
 Date: 2013-10-01
 Author: C.Jackson
 Maintainer: Chester W. Jackson Jr. <jackson.cwjr@gmail.com>
-Depends: R (>= 2.12.0), spatstat, locfit, sp, googleVis, rgeos, rgdal, tcltk, foreign, MASS, mgcv, grid, lattice, nlme, stats
+Depends: R (>= 2.15.0), spatstat, locfit, sp, googleVis, rgeos, rgdal, tcltk, foreign, MASS, mgcv, grid, lattice, nlme, stats
 Suggests: spatial
-Description: Analyzes position changes of a boundary (shoreline) along transects. (Version 1 - LEMUR)
+Description: Analyzes position changes of a boundary (shoreline) along transects. (Version 1a - LEMUR)
 License: GNU General Public License
 LazyLoad: yes
