--- a/pkg/ambur/DESCRIPTION
+++ b/pkg/ambur/DESCRIPTION
@@ -2,10 +2,11 @@ Package: ambur
 Type: Package
 Title: Analyzing Moving Boundaries Using R
 Version: 1.1.19
-Date: 2015-02-1203
+Date: 2015-03-04
 Author: C.Jackson
 Maintainer: Chester W. Jackson Jr. <jackson.cwjr@gmail.com>
-Depends: R (>= 2.15.0), spatstat, locfit, sp, googleVis, rgeos, rgdal, tcltk, foreign, MASS, mgcv, grid, lattice, nlme, stats
+Depends: R (>= 3.0.0)
+Imports: spatstat, locfit, sp, googleVis, rgeos, rgdal, tcltk, foreign, MASS, mgcv, grid, lattice, nlme, stats
 Suggests: spatial
 Description: Analyzes position changes of a boundary (shoreline) along transects. (Version 1a - LEMUR)
 License: GNU General Public License
