--- a/pkg/ambur/NAMESPACE
+++ b/pkg/ambur/NAMESPACE
@@ -2,7 +2,7 @@
 # Remove the previous line if you edit this file
 
 # Export all names
-#exportPattern(".") #deactivated 
+exportPattern(".") 
 
 # Import all packages listed as Imports or Depends
 import(
