--- a/pkg/ambur/NAMESPACE
+++ b/pkg/ambur/NAMESPACE
@@ -7,6 +7,7 @@ exportPattern(".")
 # Import all packages listed as Imports or Depends
 import(
   spatstat,
+  spatstat.utils,
   locfit,
   sp,
   rgeos,
